Actions
Bug #8815
closedmega_sas: variable set but not used
Start date:
2017-11-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
Debug build error from gcc 6:
../../common/io/mega_sas/megaraid_sas.c: In function 'build_cmd': ../../common/io/mega_sas/megaraid_sas.c:3310:12: error: variable 'context' set but not used [-Werror=unused-but-set-variable] uint32_t context; ^~~~~~~ ../../common/io/mega_sas/megaraid_sas.c: In function 'disable_intr_ppc': ../../common/io/mega_sas/megaraid_sas.c:4752:11: error: variable 'mask' set but not used [-Werror=unused-but-set-variable] uint32_t mask; ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 6 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c873de809dcfeab9e738982f896c992a43066ee5
commit c873de809dcfeab9e738982f896c992a43066ee5 Author: Toomas Soome <tsoome@me.com> Date: 2017-11-23T11:20:11.000Z 8815 mega_sas: variable set but not used Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>
Actions