8815 mega_sas: variable set but not used Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>